# opensigaps

./: .gitattributes  .gitignore  Dockerfile  README.md  anonymize.py  app.py  backend.py  clean_sigaps.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/processed/: sigaps_demo.csv  sigaps_demo.emb.ids  sigaps_demo.emb.npy
src/core/: __init__.py  entities.py  interfaces.py
src/fetchers/: __init__.py  pubmed_fetcher.py  scopus_fetcher.py
src/nlp/: .centroids_54ba2918_general.npy  .centroids_54ba2918_meta.npy  .centroids_54ba2918_oncology.npy  __init__.py  domain_inference.py  query_processor.py  semantic_ranker.py
src/repositories/: __init__.py  sigaps_repository.py
src/services/: __init__.py  recommendation_service.py
